Added the button element Adding the button element for user input and giving class

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
+    <div id="btnDiv">
+    <button id="btn">Restart!</button>
+    </div>
+
     <div id="gridContainer">
 
     </div>
-    
     <link rel="stylesheet" href="./styles.css">
     <script src="./java.js"></script>
 </body>
