Added Black Background and Eraser buttons Finished the main project and fixed minor bugs

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <div id="btnDiv">
     <button id="btn">Restart!</button>
     </div>
+    <button id="rndm">Random Colors!</button>
+    <button id="makeBlack">Black Background!</button>
+    <button id="erase">Eraser!</button>
 
     <div id="gridContainer">
 
